Bug 952194 - The #tracer-message doesn't need !important and the 22px min-width doesn't make sense, r=fitzgen

--- a/browser/themes/linux/devtools/debugger.css
+++ b/browser/themes/linux/devtools/debugger.css
@@ -107,7 +107,8 @@
 }
 
 #clear-tracer {
-  min-width: 22px !important;
+  /* Make this button as narrow as the text inside it. */
+  min-width: 1px;
 }
 
 #tracer-message {
