Bug 987680. Change a reftest to expect scrollbars on top of non-positioned sibling content. Mark some other reftests as passing now. r=roc

--- a/layout/reftests/z-index/overlayscrollbar-sorting-2.html
+++ b/layout/reftests/z-index/overlayscrollbar-sorting-2.html
@@ -4,7 +4,7 @@
 -->
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Test that overlay scrollbars are covered by overlapping non-positioned siblings</title>
+<title>Test that overlay scrollbars are not covered by overlapping non-positioned siblings</title>
 
 <style>
 
