Bug 1442961 - Remove the windowdragbox element and binding. r=jaws
MozReview-Commit-ID: JZVMty8qMCP

--- a/toolkit/content/xul.css
+++ b/toolkit/content/xul.css
@@ -255,11 +255,10 @@ caption {
 
 %ifndef MOZ_WIDGET_GTK
 titlebar,
-toolbar:not([nowindowdrag="true"]):not([customizing="true"]),
-%endif
-windowdragbox {
+toolbar:not([nowindowdrag="true"]):not([customizing="true"]) {
   -moz-window-dragging: drag;
 }
+%endif
 
 /* The list below is non-comprehensive and will probably need some tweaking. */
 toolbaritem,
