Bug 1494501 - Rename pref "layout.css.scrollbar-colors.enabled" to "layout.css.scrollbar-color.enabled". r=heycam
Differential Revision: https://phabricator.services.mozilla.com/D7030

--- a/layout/style/test/test_transitions_per_property.html
+++ b/layout/style/test/test_transitions_per_property.html
@@ -328,7 +328,7 @@ if (IsCSSPropertyPrefEnabled("layout.css.individual-transform.enabled")) {
   supported_properties["translate"] = [ test_translate_transition ];
 }
 
-if (IsCSSPropertyPrefEnabled("layout.css.scrollbar-colors.enabled")) {
+if (IsCSSPropertyPrefEnabled("layout.css.scrollbar-color.enabled")) {
   supported_properties["scrollbar-color"] = [
     test_scrollbar_color_transition,
   ];
